# chemgraph

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.arm  README.md  config.toml  docker-compose.yml  pyproject.toml
.github/workflows/: conda-tests.yml  tests.yml
claimspy/: README.md  __init__.py  agent.py
notebooks/: Demo-Local_vLLM.ipynb  Demo-multi_agent.ipynb  Demo_graspa_agent.ipynb  Demo_single_agent.ipynb  Demo_single_agent_UMA.ipynb  Demo_single_agent_report.ipynb  Experiment_PythonRELP.ipynb
notebooks/cif_files/: calf-20_pacmof.cif
scripts/: run_vllm_server.sh
scripts/evaluations/generate_evaluation_data/Exp1/: data_from_pubchempy.json  manual_workflow.json  run_manual_workflow.py
scripts/evaluations/generate_evaluation_data/Exp10/: data_from_pubchempy.json  manual_workflow.json  run_manual_workflow.py
scripts/evaluations/generate_evaluation_data/Exp11/: data_from_pubchempy.json  manual_workflow.json  run_manual_workflow.py
scripts/evaluations/generate_evaluation_data/Exp12/: find_error.py  manual_workflow.json  run_manual_workflow.py
scripts/evaluations/generate_evaluation_data/Exp13/: manual_workflow.json  reaction_dataset.json  run_manual_workflow.py
scripts/evaluations/generate_evaluation_data/Exp2/: data_from_pubchempy.json  manual_workflow.json  run_manual_workflow.py
scripts/evaluations/generate_evaluation_data/Exp3/: data.json  manual_workflow.json  run_manual_workflow.py
scripts/evaluations/generate_evaluation_data/Exp4/: data_from_pubchempy.json  (+2 more)
scripts/evaluations/mock_llm/: ground_truth_sample.json  mock_eval.py
scripts/evaluations/pubchempy/: get_molecule_from_pubchempy.py
src/chemgraph/agent/: llm_agent.py
src/chemgraph/models/: agent_response.py  ase_input.py  multi_agent_response.py  supported_models.py
src/chemgraph/tools/: ase_tools.py
src/ui/: app.py  cli.py
tests/: conftest.py
(+28 files in other folders)
