[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ChemGraph"
version = "0.1.0"
description = "A computational chemistry agent for molecular simulation tasks."
authors = [
    { name = "Thang Pham", email = "tpham@anl.gov" },
    { name = "Murat Keçeli", email = "keceli@anl.gov" },
    { name = "Aditya Tanikanti", email = "atanikanti@anl.gov" }
]
requires-python = ">=3.10"
dependencies = [
    "ase",
    "rdkit",
    "langgraph>=0.3",
    "langchain-openai>=0.2.12",
    "langchain-ollama>=0.2.1",
    "langchain-anthropic>=0.3.13",
    "langchain-google-genai",
    "pydantic",
    "pandas",
    "pubchempy @ git+https://github.com/keceli/PubChemPy.git@main",
    "pyppeteer",
    "numpy>=2",
    "langchain-experimental>=0.3.4",
    "numexpr",
    "tblite>=0.4.0",
    "pytest",
    "deepdiff",
    "pymatgen",
    "mace-torch>=0.3.13",
    "streamlit",
    "stmol",
    "ipython-genutils",
    "langsmith<0.4",
    "rich>=13.0.0",
    "toml",
    ]

[project.optional-dependencies]
uma = [
    "fairchem-core==2.3.0",
    "e3nn>=0.5",
]
ui = [
    "streamlit",
    "stmol",
    "ipython-genutils",
]

[project.urls]
"Homepage" = "https://github.com/argonne-lcf/ChemGraph"
"Repository" = "https://github.com/argonne-lcf/ChemGraph"

[project.scripts]
chemgraph = "ui.cli:main"

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 88  # Match Black's default (adjust as needed)
target-version = "py311"  # Adjust based on your Python version
exclude = ["notebooks/"]  # Add files/folders to ignore

[tool.ruff.format]
quote-style = "preserve"  # Keep existing quote style
indent-style = "space"  # Use spaces for indentation
skip-magic-trailing-comma = false  # Ensure Black-style formatting

